zorch/csrc/tensor.h

typedef struct {
  float *data;
  int *strides;
  int *shape;
  int ndim;
  int size;
  char *device;
} Tensor;
/* 张量相加运算 */
Tensor *add_tensor(Tensor *tensor1, Tensor *tensor2);
/* 张量相减运算 */
Tensor *sub_tensor(Tensor *tensor1, Tensor *tensor2);
/* 逐点相除 */
Tensor *elementwise_div_tensor(Tensor *tensor1, Tensor *tensor2);
/* 张量和标量的相乘 */
Tensor *scalar_mul_tensor(Tensor *tensor, float scalar);
/* 标量除以张量 */
Tensor *scalar_div_tensor(float scalar, Tensor *tensor);
/* 张量除以标量 */
Tensor *tensor_div_scalar(Tensor *tensor, float scalar);
/* 张量作为底数，标量作为指数 */
Tensor *tensor_pow_scalar(Tensor *tensor, float exponent);
Tensor *sum_tensor(Tensor *tensor, int axis, bool keepdims);
Tensor *sin_tensor(Tensor *tensor);
Tensor *cos_tensor(Tensor *tensor);
Tensor *tanh_tensor(Tensor *tensor);
Tensor *log_tensor(Tensor *tensor);
Tensor *neg_tensor(Tensor *tensor);
void to_device(Tensor *tensor, char *device);
Tensor *transpose_axes_tensor(Tensor *tensor, int axis1, int axis2);
Tensor *exp_tensor(Tensor *tensor);
Tensor *abs_tensor(Tensor *tensor);