zorch/tensor.py


            result_data = Tensor()
            result_data.tensor = result_tensor_ptr
            result_data.shape = broadcasted_shape_add.copy()
            result_data.ndim = len(broadcasted_shape_add)
            result_data.device = self.device
            result_data.numel = 1
            for s in result_data.shape:
                result_data.numel *= s

        else:
            # 如果两个张量形状相同，则调用add_tensor
            Tensor._C.add_tensor.argtypes = [
                ctypes.POINTER(CTensor), ctypes.POINTER(CTensor)]
            Tensor._C.add_tensor.restype = ctypes.POINTER(CTensor)
            result_tensor_ptr = Tensor._C.add_tensor(self.tensor, other.tensor)

            result_data = Tensor()
            result_data.tensor = result_tensor_ptr
            result_data.shape = self.shape.copy()
            result_data.ndim = self.ndim

            result_data.device = self.device
            # 在广播的情况下，如果想要计算正确的元素数量
            # 则需要更新numel
            result_data.numel = self.numel

        return result_data

    def __sub__(self, other):
        if isinstance(other, (int, float)):
            other = other * self.ones_like()

        # Call add_tensor if shapes are identical
        Tensor._C.sub_tensor.argtypes = [
            ctypes.POINTER(CTensor), ctypes.POINTER(CTensor)]
        Tensor._C.sub_tensor.restype = ctypes.POINTER(CTensor)

        result_tensor_ptr = Tensor._C.sub_tensor(self.tensor, other.tensor)

        result_data = Tensor()
        result_data.tensor = result_tensor_ptr
        result_data.shape = self.shape.copy()
        result_data.ndim = self.ndim

        result_data.device = self.device
        # Update this to calculate the correct number of elements if broadcasting
        result_data.numel = self.numel

        return result_data

    def __truediv__(self, other):
        if isinstance(other, (int, float)):
            other = float(other)

            Tensor._C.tensor_div_scalar.argtypes = [
                ctypes.POINTER(CTensor),
                ctypes.c_float,
            ]
            Tensor._C.tensor_div_scalar.restype = ctypes.POINTER(CTensor)
            result_tensor_ptr = Tensor._C.tensor_div_scalar(
                self.tensor, other)

            result_data = Tensor()
            result_data.tensor = result_tensor_ptr
            result_data.shape = self.shape.copy()
            result_data.ndim = self.ndim

            result_data.device = self.device
            # Update this to calculate the correct number of elements if broadcasting
            result_data.numel = self.numel

            return result_data

        Tensor._C.elementwise_div_tensor.argtypes = [
            ctypes.POINTER(CTensor),
            ctypes.POINTER(CTensor),
        ]
        Tensor._C.elementwise_div_tensor.restype = ctypes.POINTER(CTensor)
        result_tensor_ptr = Tensor._C.elementwise_div_tensor(
            self.tensor, other.tensor)

        result_data = Tensor()
        result_data.tensor = result_tensor_ptr
        result_data.shape = self.shape.copy()
        result_data.ndim = self.ndim

        result_data.device = self.device
        # Update this to calculate the correct number of elements if broadcasting
        result_data.numel = self.numel

        return result_data

    def __rtruediv__(self, other):
        if isinstance(other, (int, float)):
            other = float(other)

            Tensor._C.scalar_div_tensor.argtypes = [
                ctypes.c_float,
                ctypes.POINTER(CTensor),
            ]
            Tensor._C.scalar_div_tensor.restype = ctypes.POINTER(CTensor)
            result_tensor_ptr = Tensor._C.scalar_div_tensor(
                self.tensor, other)

            result_data = Tensor()
            result_data.tensor = result_tensor_ptr
            result_data.shape = self.shape.copy()
            result_data.ndim = self.ndim

            result_data.device = self.device
            # Update this to calculate the correct number of elements if broadcasting
            result_data.numel = self.numel

            return result_data

        return NotImplemented

    def __pow__(self, other):
        other = float(other)
        Tensor._C.tensor_pow_scalar.argtypes = [
            ctypes.POINTER(CTensor), ctypes.c_float]
        Tensor._C.tensor_pow_scalar.restype = ctypes.POINTER(CTensor)

        result_tensor_ptr = Tensor._C.tensor_pow_scalar(
            self.tensor, ctypes.c_float(other))

        result_data = Tensor()
        result_data.tensor = result_tensor_ptr
        result_data.shape = self.shape.copy()
        result_data.ndim = self.ndim
        result_data.device = self.device
        result_data.numel = self.numel

        return result_data

    def __lt__(self, other):
        if self.ndim == 0:
            return self[0] < other
        return False

    def sin(self):
        Tensor._C.sin_tensor.argtypes = [ctypes.POINTER(CTensor)]
        Tensor._C.sin_tensor.restype = ctypes.POINTER(CTensor)

        result_tensor_ptr = Tensor._C.sin_tensor(self.tensor)

        result_data = Tensor()
        result_data.tensor = result_tensor_ptr
        result_data.shape = self.shape.copy()
        result_data.ndim = self.ndim
        result_data.device = self.device
        result_data.numel = self.numel

        return result_data

    def cos(self):
        Tensor._C.cos_tensor.argtypes = [ctypes.POINTER(CTensor)]
        Tensor._C.cos_tensor.restype = ctypes.POINTER(CTensor)

        result_tensor_ptr = Tensor._C.cos_tensor(self.tensor)

        result_data = Tensor()
        result_data.tensor = result_tensor_ptr
        result_data.shape = self.shape.copy()
        result_data.ndim = self.ndim
        result_data.device = self.device
        result_data.numel = self.numel

        return result_data

    def tanh(self):
        Tensor._C.tanh_tensor.argtypes = [ctypes.POINTER(CTensor)]
        Tensor._C.tanh_tensor.restype = ctypes.POINTER(CTensor)

        result_tensor_ptr = Tensor._C.tanh_tensor(self.tensor)

        result_data = Tensor()
        result_data.tensor = result_tensor_ptr
        result_data.shape = self.shape.copy()
        result_data.ndim = self.ndim
        result_data.device = self.device
        result_data.numel = self.numel

        return result_data

    def log(self):
        Tensor._C.log_tensor.argtypes = [ctypes.POINTER(CTensor)]
        Tensor._C.log_tensor.restype = ctypes.POINTER(CTensor)

        result_tensor_ptr = Tensor._C.log_tensor(self.tensor)

        result_data = Tensor()
        result_data.tensor = result_tensor_ptr
        result_data.shape = self.shape.copy()
        result_data.ndim = self.ndim
        result_data.device = self.device
        result_data.numel = self.numel

        return result_data

    def __abs__(self):
        Tensor._C.abs_tensor.argtypes = [ctypes.POINTER(CTensor)]
        Tensor._C.abs_tensor.restype = ctypes.POINTER(CTensor)

        result_tensor_ptr = Tensor._C.abs_tensor(self.tensor)

        result_data = Tensor()
        result_data.tensor = result_tensor_ptr
        result_data.shape = self.shape.copy()
        result_data.ndim = self.ndim
        result_data.device = self.device
        result_data.numel = self.numel

        return result_data

    def __neg__(self):
        Tensor._C.neg_tensor.argtypes = [ctypes.POINTER(CTensor)]
        Tensor._C.neg_tensor.restype = ctypes.POINTER(CTensor)

        result_tensor_ptr = Tensor._C.neg_tensor(self.tensor)

        result_data = Tensor()
        result_data.tensor = result_tensor_ptr
        result_data.shape = self.shape.copy()
        result_data.ndim = self.ndim
        result_data.device = self.device
        result_data.numel = self.numel

        return result_data

    def __rmul__(self, other):
        other = float(other)
        Tensor._C.scalar_mul_tensor.argtypes = [
            ctypes.POINTER(CTensor), ctypes.c_float]
        Tensor._C.scalar_mul_tensor.restype = ctypes.POINTER(CTensor)

        result_tensor_ptr = Tensor._C.scalar_mul_tensor(
            self.tensor, ctypes.c_float(other))

        result_data = Tensor()
        result_data.tensor = result_tensor_ptr
        result_data.shape = self.shape.copy()
        result_data.ndim = self.ndim
        result_data.device = self.device
        result_data.numel = self.numel

        return result_data

    def exp(self):
        Tensor._C.exp_tensor.argtypes = [ctypes.POINTER(CTensor)]
        Tensor._C.exp_tensor.restype = ctypes.POINTER(CTensor)

        result_tensor_ptr = Tensor._C.exp_tensor(self.tensor)

        result_data = Tensor()
        result_data.tensor = result_tensor_ptr
        result_data.shape = self.shape.copy()
        result_data.ndim = self.ndim
        result_data.device = self.device
        result_data.numel = self.numel

        return result_data

    def sigmoid(self):
        Tensor._C.sigmoid_tensor.argtypes = [ctypes.POINTER(CTensor)]
        Tensor._C.sigmoid_tensor.restype = ctypes.POINTER(CTensor)

        result_tensor_ptr = Tensor._C.sigmoid_tensor(self.tensor)

        result_data = Tensor()
        result_data.tensor = result_tensor_ptr
        result_data.shape = self.shape.copy()
        result_data.ndim = self.ndim
        result_data.device = self.device
        result_data.numel = self.numel

        return result_data

    def to(self, device):
        device = str(device)

        self.device = device
        self.device_ctype = self.device.encode('utf-8')

        Tensor._C.to_device.argtypes = [
            ctypes.POINTER(CTensor), ctypes.c_char_p]
        Tensor._C.to_device.restype = None
        Tensor._C.to_device(self.tensor, self.device_ctype)

        return self

    def sum(self, axis=None, keepdim=False) -> Self:
        if axis is not None and axis < 0:
            axis = self.ndim + axis

        if axis == None:
            axis = -1

        if axis > self.ndim - 1:
            raise ValueError(
                f"Error: axis argument {axis} cannot be higher than tensor dimension {self.ndim}")

        Tensor._C.sum_tensor.argtypes = [
            ctypes.POINTER(CTensor), ctypes.c_int, ctypes.c_bool]
        Tensor._C.sum_tensor.restype = ctypes.POINTER(CTensor)

        result_tensor_ptr = Tensor._C.sum_tensor(self.tensor, axis, keepdim)

        result_data = Tensor()
        result_data.tensor = result_tensor_ptr

        if axis == -1:
            if keepdim:
                result_data.ndim = self.ndim
                result_data.shape = [1] * self.ndim
            else:
                result_data.shape = [1]
                result_data.ndim = 1
        else:
            if keepdim:
                result_data.shape = self.shape[:axis] + \
                    [1] + self.shape[axis+1:]
            else:
                result_data.shape = self.shape[:axis] + self.shape[axis+1:]
            result_data.ndim = len(result_data.shape)

        result_data.device = self.device
        result_data.numel = 1

        for s in result_data.shape:
            result_data.numel *= s

        return result_data

    def transpose(self, axis1, axis2):
        if axis1 < 0:
            axis1 = self.ndim + axis1
        if axis2 < 0:
            axis2 = self.ndim + axis2

        Tensor._C.transpose_axes_tensor.argtypes = [
            ctypes.POINTER(CTensor), ctypes.c_int, ctypes.c_int]
        Tensor._C.transpose_axes_tensor.restype = ctypes.POINTER(CTensor)

        result_tensor_ptr = Tensor._C.transpose_axes_tensor(
            self.tensor, axis1, axis2)

        result_data = Tensor()
        result_data.tensor = result_tensor_ptr
        result_data.shape = self.shape.copy()
        result_data.shape[axis1] = self.shape[axis2]
        result_data.shape[axis2] = self.shape[axis1]
        result_data.ndim = self.ndim
        result_data.device = self.device
        result_data.numel = self.numel

        return result_data
